# Sofa.IGTLink

./: CMakeLists.txt  README.md  SofaIGTLinkConfig.cmake.in
.github/workflow/: ci.yml
.github/workflows/: ci.yml
extensions/Python/: Headers.py  SimulatedObjects.py  SlicerCreator.py
scenes/: BAR_LEGACY.vtk  LiverCollapse.scn  LungDeformation.scn  PickingInteractor_Lagrange.scn  PickingInteractor_Spring.scn  iGTLinkMouseInteractor.scn  iGTLinkMouseInteractor_Lagrange.scn  iGTLinkMouseInteractor_Spring.scn  iGTLinkTest.scn  iGTLinkTestReceiver.scn  iGTLinkTestSender.scn  right-long-mesh-low.vtk
src/SofaIGTLink/: initSofaIGTLinkPlugin.cpp
src/SofaIGTLink/messages/: iGTLinkMessage.cpp  iGTLinkMessage.h  iGTLinkMessage.inl  iGTLinkPointMessage.cpp  iGTLinkPointMessage.h  iGTLinkPolyDataMessage.cpp  iGTLinkPolyDataMessage.h
src/SofaIGTLink/sockets/: iGTLinkBase.cpp  iGTLinkBase.h  iGTLinkClient.cpp  iGTLinkClient.h  iGTLinkClient.inl  iGTLinkServer.cpp  iGTLinkServer.h  iGTLinkServer.inl  iGTLinkThread.cpp  iGTLinkThread.h
src/SofaIGTLink/utils/: EngineToMState.cpp  EngineToMState.h  EngineToMState.inl  EngineToTopology.cpp  EngineToTopology.inl  UserInteractionController.cpp  UserInteractionController.h  UserInteractionController.inl
src/SofaSlicer/openigtlink/: iGTLinkBase.cpp  iGTLinkBase.h  iGTLinkClient.cpp  iGTLinkClient.h  iGTLinkClient.inl  iGTLinkMessage.cpp  iGTLinkMessage.h  iGTLinkMessage.inl  iGTLinkServer.cpp  iGTLinkServer.h  iGTLinkServer.inl  iGTLinkThread.cpp  iGTLinkThread.h
src/SofaSlicer/openigtlink/messages/: iGTLinkMessage.cpp  iGTLinkMessage.h  iGTLinkMessage.inl  iGTLinkPointMessage.cpp  iGTLinkPointMessage.h
src/SofaSlicer/utils/: EngineToTopology.cpp  EngineToTopology.h  EngineToTopology.inl  UserInteractionController.cpp  UserInteractionController.inl
src/sofa/igtlink/: initSofaIGTLinkPlugin.cpp
src/sofa/igtlink/messages/: iGTLinkMessage.cpp  iGTLinkMessage.h  iGTLinkPointMessage.cpp  iGTLinkPointMessage.h  iGTLinkPolyDataMessage.cpp  iGTLinkPolyDataMessage.h
src/sofa/igtlink/sockets/: iGTLinkBase.cpp  iGTLinkBase.h  iGTLinkClient.cpp  iGTLinkClient.h  iGTLinkClient.inl  iGTLinkServer.cpp  iGTLinkServer.h  iGTLinkServer.inl  iGTLinkThread.cpp  iGTLinkThread.h
src/sofa/igtlink/utils/: EngineToMState.cpp  EngineToMState.h  EngineToMState.inl  PickingInteractor.cpp  PickingInteractor.h  PickingInteractor.inl  UserInteractionController.cpp  UserInteractionController.h  UserInteractionController.inl  iGTLinkMouseInteractor.cpp  iGTLinkMouseInteractor.h  iGTLinkMouseInteractor.inl
